Bug fixes on mobile responsiveness on image focus component

--- a/src/views/ImageFocus/ImageFocus.module.css
+++ b/src/views/ImageFocus/ImageFocus.module.css
@@ -101,8 +101,9 @@
 }
 
 .closeButton {
-  position: absolute;
-  right: 0;
+  position: fixed;
+  right: 15px;
+  z-index: 10;
   background: rgba(71, 123, 236, 0.9);
   color: #fff;
   font-weight: 400;
@@ -123,11 +124,16 @@
 @media screen and (max-width: 762px) {
   .infoContainer {
     flex-direction: column-reverse;
-    overflow-y: scroll;
     justify-content: flex-end;
+  }
+  .imageFocusContainer {
+    overflow: scroll;
   }
   .imageContainer {
     width: 100%;
+  }
+  .imageAuthor {
+    font-size: 30px;
   }
   .leftContainer {
     width: 90%;
